--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
     "register-service-worker": "^1.7.1",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.6.11",
     "vue-avatar": "^2.3.3",
     "vue-router": "^3.2.0",
